--- a/Profile.html
+++ b/Profile.html
@@ -8,7 +8,14 @@
 </head>
 
 <body>
-
+    <header>
+        <img src="reddit-logo.png" alt="logo" width="60" height="60">
+    </header>
+    <img src="user-profile.png">
+    <span>USERNAME</span>
+    <div>
+        USER'S BIO
+    </div>
 </body>
 
 </html>
