--- a/Profile.html
+++ b/Profile.html
@@ -10,8 +10,9 @@
 <body>
     <header>
         <img src="reddit-logo.png" alt="logo" width="60" height="60">
+        <span>MyDiscussionForum</span>
     </header>
-    <img src="user-profile.png">
+    <img src="user-profile.png" alt="user-img" width="60" height="60">
     <span>USERNAME</span>
     <div>
         USER'S BIO
