added folder for images and changed paths

--- a/Profile.html
+++ b/Profile.html
@@ -9,10 +9,10 @@
 
 <body>
     <header>
-        <img src="reddit-logo.png" alt="logo" width="60" height="60">
+        <img src="public/reddit-logo.png" alt="logo" width="60" height="60">
         <span>MyDiscussionForum</span>
     </header>
-    <img src="user-profile.png" alt="user-img" width="60" height="60">
+    <img src="public/user-profile.png" alt="user-img" width="60" height="60">
     <span>USERNAME</span>
     <div>
         USER'S BIO
