--- a/LogIn.html
+++ b/LogIn.html
@@ -4,10 +4,52 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Log In</title>
+    <link rel ="stylesheet" href = "#">
 </head>
 
+
 <body>
+    <header>
+       
+        <h1>My Discussion</h1>
+
+    </header>
+    <div> 
+        <form method ="post" action ="#">
+            <fieldset>
+                <legend>Log In</legend>
+                <p>
+                <label>Username : </label>
+                <input type ="text" name = "username"/>
+                </p>
+                <p>
+                    <label>Password : </label>
+                    <input type ="password" name = "password"/>
+                </p>
+                <input type ="submit"/>
+            </fieldset>
+        </form>
+        
+
+    </div>
+
+    <div>
+        <form method ="post" action ="#">
+            <fieldset>
+                <legend>Sign Up</legend>
+                <p>
+                <label>Username : </label>
+                <input type ="text" name = "username"/>
+                </p>
+                <p>
+                    <label>Password : </label>
+                    <input type ="password" name = "password"/>
+                </p>
+                <input type ="submit"/>
+            </fieldset>
+        </form>
+    </div>
 
 </body>
 
