--- a/CreatePost.html
+++ b/CreatePost.html
@@ -8,6 +8,31 @@
 </head>
 
 <body>
+   
+    <header>
+
+    </header>
+    <main>
+        <form method="post" action ="#">
+            <fieldset>
+                <legend>Create Post</legend> 
+                <p>
+                <label>Title:</label>
+                <input type="text" id="postTitle" name="postTitle" required>
+                </p>
+                <p>
+                <label for="postContent">Content:</label>
+                <textarea id="postContent" name="postContent" rows="8" required></textarea>
+                </p>
+                <button type="submit">Submit Post</button>
+
+            </fieldset>
+
+
+        </form>
+    </main>
+
+    
 
 </body>
 
