--- a/CreatePost.html
+++ b/CreatePost.html
@@ -4,12 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="css/home.css">
+    <title>Create a Post</title>
 </head>
 
 <body>
    
     <header>
+        <h1>Talks@UBC</h1>
 
     </header>
     <main>
