--- a/LogIn.html
+++ b/LogIn.html
@@ -5,14 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Log In</title>
-    <link rel ="stylesheet" href = "#">
+    <link rel="stylesheet" href="css/home.css">
 </head>
 
 
 <body>
     <header>
        
-        <h1>My Discussion</h1>
+        <h1>Talks@UBC</h1>
 
     </header>
     <div> 
