Made search and login button nicer

--- a/Home.html
+++ b/Home.html
@@ -21,7 +21,7 @@
         <div class="main-content">
             <header>
                 <input type="search" placeholder="Search">
-                <button>Log In</button>
+                <button href = "">Log In</button>
             </header>
             <main>
                 <div class="filter-dropdown">Sort by</div>
