Improved home.css

--- a/Home.html
+++ b/Home.html
@@ -20,8 +20,8 @@
         </nav>
         <div class="main-content">
             <header>
-                <input type="search" placeholder="Search">
-                <button href = "">Log In</button>
+                <input type="search" placeholder="  Search">
+                <button href = ""> Search </button>
             </header>
             <main>
                 <div class="filter-dropdown">Sort by</div>
