Linked nav links to appropriate html pages

--- a/Home.html
+++ b/Home.html
@@ -13,9 +13,7 @@
             <!-- Navigation links go here -->
             <ul>
                 <li><a href="#">Home</a></li>
-                <li><a href="#">Popular</a></li>
-                <li><a href="#">All</a></li>
-                <!-- Add more navigation links as needed -->
+                <li><a href="LogIn.html">Login</a></li>
             </ul>
         </nav>
         <div class="main-content">
@@ -36,7 +34,7 @@
                 <!-- Repeat for more posts -->
             </main>
             <footer>
-                <p>Footer content goes here</p>
+                <p>Talks@UBC</p>
             </footer>
         </div>
     </div>
