--- a/LogIn.html
+++ b/LogIn.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Log In</title>
-    <link rel="stylesheet" href="css/home.css">
+    <link rel="stylesheet" href="css/login-createpost.css">
 </head>
 
 
@@ -15,41 +15,43 @@
         <h1>Talks@UBC</h1>
 
     </header>
-    <div> 
-        <form method ="post" action ="#">
-            <fieldset>
-                <legend>Log In</legend>
-                <p>
-                <label>Username : </label>
-                <input type ="text" name = "username"/>
-                </p>
-                <p>
-                    <label>Password : </label>
-                    <input type ="password" name = "password"/>
-                </p>
-                <input type ="submit"/>
-            </fieldset>
-        </form>
-        
+    <main>
+        <div id = "login"> 
+            <form method ="post" action ="#">
+                <fieldset>
+                    <legend>Log In</legend>
+                    <p>
+                    <label>Username : </label>
+                    <input type ="text" name = "username"/>
+                    </p>
+                    <p>
+                        <label>Password : </label>
+                        <input type ="password" name = "password"/>
+                    </p>
+                    <input type ="submit"/>
+                </fieldset>
+            </form>
+            
 
-    </div>
+        </div>
 
-    <div>
-        <form method ="post" action ="#">
-            <fieldset>
-                <legend>Sign Up</legend>
-                <p>
-                <label>Username : </label>
-                <input type ="text" name = "username"/>
-                </p>
-                <p>
-                    <label>Password : </label>
-                    <input type ="password" name = "password"/>
-                </p>
-                <input type ="submit"/>
-            </fieldset>
-        </form>
-    </div>
+        <div id = "signup">
+            <form method ="post" action ="#">
+                <fieldset>
+                    <legend>Sign Up</legend>
+                    <p>
+                    <label>Username : </label>
+                    <input type ="text" name = "username"/>
+                    </p>
+                    <p>
+                        <label>Password : </label>
+                        <input type ="password" name = "password"/>
+                    </p>
+                    <input type ="submit"/>
+                </fieldset>
+            </form>
+        </div>
+    </main>
 
 </body>
 
