changed href in Post.html

--- a/Post.html
+++ b/Post.html
@@ -13,7 +13,7 @@
         <nav>
             <h1>Talks@UBC</h1>
             <ul>
-                <li><a href="index.html">Home</a></li>
+                <li><a href="Home.html">Home</a></li>
                 <li><a href="LogIn.html">Login</a></li>
             </ul>
         </nav>
