Link to home.html on navbar

--- a/Home.html
+++ b/Home.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Content Board - Frontend</title>
+        <title>Homepage</title>
         <link rel="stylesheet" href="css/home.css">
     </head>
 <body>
@@ -12,8 +12,9 @@
             <h1> Talks@UBC </h1>
             <!-- Navigation links go here -->
             <ul>
-                <li><a href="#">Home</a></li>
+                <li><a href="Home.html">Home</a></li>
                 <li><a href="LogIn.html">Login</a></li>
+                <li><a href = "Profile.html">Profile</a></li>
             </ul>
         </nav>
         <div class="main-content">
