--- a/CreatePost.html
+++ b/CreatePost.html
@@ -11,7 +11,7 @@
 <body>
    
     <header>
-        <h1>Talks@UBC</h1>
+        <a href="Home.html"><h1>Talks@UBC</h1></a>
 
     </header>
     <main>
