--- a/LogIn.html
+++ b/LogIn.html
@@ -12,7 +12,7 @@
 <body>
     <header>
        
-        <h1>Talks@UBC</h1>
+        <a href="Home.html"><h1>Talks@UBC</h1></a>
 
     </header>
     <main>
