--- a/Profile.html
+++ b/Profile.html
@@ -4,18 +4,37 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Post Details - Talks@UBC</title>
+    <link rel="stylesheet" href="css/profile.css">
 </head>
 
 <body>
-    <header>
-        <img src="public/reddit-logo.png" alt="logo" width="60" height="60">
-        <span>MyDiscussionForum</span>
-    </header>
-    <img src="public/user-profile.png" alt="user-img" width="60" height="60">
-    <span>USERNAME</span>
-    <div>
-        USER'S BIO
+    <div class="container">
+        <nav>
+            <h1>Talks@UBC</h1>
+            <ul>
+                <li><a href="Home.html">Home</a></li>
+                <li><a href="LogIn.html">Login</a></li>
+            </ul>
+        </nav>
+        <div class="main-content">
+            <header>
+                <input type="search" placeholder="  Search">
+                <button>Search</button>
+            </header>
+            <main>
+                <div class="profile">
+                    <img src="public/user-profile.png" alt="user-img" class="user-img">
+                    <h2>USERNAME</h2>
+                    <div class="bio">
+                        USER'S BIO
+                    </div>
+                </div>
+            </main>
+            <footer>
+                <p>Talks@UBC</p>
+            </footer>
+        </div>
     </div>
 </body>
 
