--- a/LogIn.html
+++ b/LogIn.html
@@ -22,11 +22,11 @@
                     <legend>Log In</legend>
                     <p>
                     <label>Username : </label>
-                    <input type ="text" name = "username"/>
+                    <input type ="text" name = "username" required minlength="4" maxlength="20"/>
                     </p>
                     <p>
                         <label>Password : </label>
-                        <input type ="password" name = "password"/>
+                        <input type ="password" name = "password" required minlength="8" maxlength="20"/>
                     </p>
                     <input type ="submit"/>
                 </fieldset>
@@ -41,11 +41,11 @@
                     <legend>Sign Up</legend>
                     <p>
                     <label>Username : </label>
-                    <input type ="text" name = "username"/>
+                    <input type ="text" name = "username" required minlength="4" maxlength="20"/>
                     </p>
                     <p>
                         <label>Password : </label>
-                        <input type ="password" name = "password"/>
+                        <input type ="password" name = "password" required minlength="8" maxlength="20"/>
                     </p>
                     <input type ="submit"/>
                 </fieldset>
