changes for M1 feedback

--- a/Profile.html
+++ b/Profile.html
@@ -29,6 +29,17 @@
                     <div class="bio">
                         USER'S BIO
                     </div>
+                    <div class ="photo-upload">
+                        <form method="post">
+                            <p>
+                                <label>Upload a profile picture</label>
+                            </p>
+                            <p>
+                                <input type="file" name="profile-pic"/>
+                            </p>
+                        </form>
+
+                    </div>
                 </div>
             </main>
             <footer>
