--- a/LogIn.html
+++ b/LogIn.html
@@ -40,6 +40,18 @@
                 <fieldset>
                     <legend>Sign Up</legend>
                     <p>
+                        <label>First Name : </label>
+                        <input type ="text" name = "name" required minlength="2" maxlength="20"/>
+                    </p>
+                    <p>
+                        <label>Last Name : </label>
+                        <input type ="text" name = "lastname" required minlength="2" maxlength="20"/>
+                    </p>
+                    <p>
+                        <label>Email : </label>
+                        <input type ="email" name = "email" required/>
+                    </p>
+                    <p>
                     <label>Username : </label>
                     <input type ="text" name = "username" required minlength="4" maxlength="20"/>
                     </p>
