--- a/LogIn.html
+++ b/LogIn.html
@@ -17,7 +17,7 @@
     </header>
     <main>
         <div id = "login"> 
-            <form method ="post" action ="#">
+            <form  id="login-form" method ="post" action ="#">
                 <fieldset>
                     <legend>Log In</legend>
                     <p>
@@ -36,7 +36,7 @@
         </div>
 
         <div id = "signup">
-            <form method ="post" action ="#">
+            <form id="signup-form" method ="post" action ="#">
                 <fieldset>
                     <legend>Sign Up</legend>
                     <p>
@@ -59,7 +59,12 @@
                         <label>Password : </label>
                         <input type ="password" name = "password" required minlength="8" maxlength="20"/>
                     </p>
+                    <p>
+                        <label>By checking this box, I accept the software license</label>
+                        <input type = "checkbox" name = "accept">
+                    </p>
                     <input type ="submit"/>
+
                 </fieldset>
             </form>
         </div>
