Linked profile page to homepage

--- a/Profile.html
+++ b/Profile.html
@@ -11,7 +11,7 @@
 <body>
     <div class="container">
         <nav>
-            <h1>Talks@UBC</h1>
+            <a href = "Home.html"><h1>Talks@UBC</h1></a>
             <ul>
                 <li><a href="Home.html">Home</a></li>
                 <li><a href="LogIn.html">Login</a></li>
