--- a/login.html
+++ b/login.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Log In</title>
     <link rel="stylesheet" href="css/login-createpost.css">
+    <script src = "js/form-validation1.js"></script>
 </head>
 
 
@@ -20,10 +21,12 @@
             <form  id="login-form" method ="post" action ="#">
                 <fieldset>
                     <legend>Log In</legend>
+
                     <p>
                     <label>Username : </label>
                     <input type ="text" name = "username" required minlength="4" maxlength="20"/>
                     </p>
+
                     <p>
                         <label>Password : </label>
                         <input type ="password" name = "password" required minlength="8" maxlength="20"/>
