--- a/CreatePost.html
+++ b/CreatePost.html
@@ -24,7 +24,7 @@
                     <label>Title:</label>
                     </p>
                     <p>
-                    <input type="text" id="postTitle" name="postTitle" required>
+                    <input type="text" id="postTitle" name="postTitle" required maxlength="">
                     </p>
                     <p>
                     </p>
