--- a/CreatePost.html
+++ b/CreatePost.html
@@ -31,6 +31,19 @@
                     <p>
                     <textarea id="postContent" name="postContent" rows="8" required></textarea>
                     </p>
+                    <label for="category">Category:</label>
+                        <select id="category" name="category" size="1" required>
+                        <option value="1">News & Current Events</option>
+                        <option value="2">Technology & Science</option>
+                        <option value="3">Entertainment & Media</option>
+                        <option value="4">Gaming</option>
+                        <option value="5">Lifestyle & Health</option>
+                        <option value="6">Arts & Creativity</option>
+                        <option value="7">Education & Careers</option>
+                        <option value="8">Hobbies & Interests</option>
+                        <option value="9">Sports & Fitness</option>
+                        <option value="10">Community & Social</option>
+                        </select>
                     <input type="submit"/>
 
                 </fieldset>
