Added text decoratino for links

--- a/home-loggedin.html
+++ b/home-loggedin.html
@@ -20,7 +20,7 @@
         <header>
             <input type="search" placeholder="Search">
             <button>Search</button>
-            <button id="new-post-btn">New Post</button>
+            <button id="new-post-btn"><a href = >New Post</a></button>
         </header>
         <main>
             <!-- Dropdown for sorting -->
