Updated path for search function

--- a/Home.html
+++ b/Home.html
@@ -19,7 +19,7 @@
         </nav>
         <div class="main-content">
             <header>
-                <form action="search.php" method="get">
+                <form action="php/search.php" method="get">
                     <input type="search" name="searchQuery" placeholder="Search...">
                     <button type="submit">Search</button>
                 </form>                
