--- a/login.html
+++ b/login.html
@@ -1,62 +1,3 @@
-<?php
-require_once 'db_connection.php';
-$pdo=openCon();
-session_start();
-// login checks
-if ($_SERVER["REQUEST_METHOD"] == "POST" && isset($_POST['action']) && $_POST['action'] == 'login') {
-
-    $username = trim($_POST['username']);
-    $password = trim($_POST['password']);
-
-    $login_sql = "SELECT password FROM user WHERE username =  ?";
-    $stmt = $pdo -> prepare($login_sql);
-    $stmt -> execute([$username]);
-    $user_result= $stmt-> fetch();
-
-    if (!$user_result)
-        echo "Username does not exist";
-    else if ($password === $user_result['password']) {
-        $_SESSION['loggedin'] = true;
-        $_SESSION['username'] = $username;
-
-        header("location:http://localhost/COSC360-MyDiscussion/home-loggedin.php");
-        exit();
-    } else {
-        echo "Invalid username or password.";
-    }
-}
-
-//signup email check & posting data to database
-if ($_SERVER["REQUEST_METHOD"] == "POST" && isset($_POST['action']) && $_POST['action'] == 'sign-up') {
-    $name = trim($_POST['name']);
-    $lastname = trim($_POST['lastname']);
-    $email = trim($_POST['email']);
-    $username = trim($_POST['username']);
-    $password = trim($_POST['password']);
-
-    $signup_sql1 = "SELECT COUNT(email) AS email_count FROM user WHERE email = ?";
-    $stmt = $pdo->prepare($signup_sql1);
-    $stmt->execute([$email]);
-    $email_result = $stmt->fetch();
-
-    if ($email_result['email_count'] > 0) {
-        echo "This email is already used.";
-    } else {
-        // Inserting new user data into the database
-        $signup_sql2 = "INSERT INTO user (firstName, lastName, email, username, password) VALUES (?, ?, ?, ?, ?)";
-        $stmt = $pdo->prepare($signup_sql2);
-        $success = $stmt->execute([$name, $lastname, $email, $username, $password]); 
-
-        if ($success) {
-            echo "Signup successful!";
-        } else {
-            echo "Unexpected error, please try again.";
-        }
-    }
-}
-
-?>
-
 <!DOCTYPE html>
 <html lang="en">
 
@@ -65,7 +6,9 @@ if ($_SERVER["REQUEST_METHOD"] == "POST" && isset($_POST['action']) && $_POST['a
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Log In</title>
     <link rel="stylesheet" href="css/login-createpost.css">
+    <script src = "js/form-validation1.js"></script>
 </head>
+
 
 <body>
     <header>
@@ -77,12 +20,13 @@ if ($_SERVER["REQUEST_METHOD"] == "POST" && isset($_POST['action']) && $_POST['a
         <div id = "login"> 
             <form  id="login-form" method ="post" action ="#">
                 <fieldset>
-                    <input type="hidden" name="action" value="login"/>
                     <legend>Log In</legend>
+
                     <p>
                     <label>Username : </label>
                     <input type ="text" name = "username" required minlength="4" maxlength="20"/>
                     </p>
+
                     <p>
                         <label>Password : </label>
                         <input type ="password" name = "password" required minlength="8" maxlength="20"/>
@@ -90,12 +34,13 @@ if ($_SERVER["REQUEST_METHOD"] == "POST" && isset($_POST['action']) && $_POST['a
                     <input type ="submit"/>
                 </fieldset>
             </form>
+            
+
         </div>
 
         <div id = "signup">
             <form id="signup-form" method ="post" action ="#">
                 <fieldset>
-                    <input type="hidden" name="action" value="sign-up"/>
                     <legend>Sign Up</legend>
                     <p>
                         <label>First Name : </label>
@@ -122,9 +67,12 @@ if ($_SERVER["REQUEST_METHOD"] == "POST" && isset($_POST['action']) && $_POST['a
                         <input type = "checkbox" name = "accept">
                     </p>
                     <input type ="submit"/>
+
                 </fieldset>
             </form>
         </div>
     </main>
+
 </body>
+
 </html>
