--- a/Home.html
+++ b/Home.html
@@ -19,10 +19,16 @@
         </nav>
         <div class="main-content">
             <header>
-                <form action="php/search.php" method="get">
+                <!-- <form action="php/search.php" method="get">
                     <input type="search" name="searchQuery" placeholder="Search...">
                     <button type="submit">Search</button>
-                </form>                
+                </form>                 -->
+
+                <form onsubmit="performSearch(event)">
+                    <input type="search" id="searchQuery" name="searchQuery" placeholder="Search...">
+                    <button type="submit">Search</button>
+                </form>
+
             </header>
             <main>
                 <div class="filter-dropdown">Sort by</div>
@@ -48,4 +54,26 @@
         </div>
     </div>
 </body>
+
+<script>
+    function performSearch(event) {
+        event.preventDefault(); // Prevent the form from submitting through the browser
+        var searchQuery = document.getElementById('searchQuery').value;
+    
+        // Perform an AJAX request to search.php
+        var xhr = new XMLHttpRequest();
+        xhr.open("GET", "php/search.php?searchQuery=" + encodeURIComponent(searchQuery), true);
+        xhr.onload = function () {
+            if (xhr.status === 200) {
+                // Replace the content of the 'main' section with the search results
+                document.querySelector('main').innerHTML = xhr.responseText;
+            } else {
+                // Handle request failure
+                console.error("Request failed.  Returned status of " + xhr.status);
+            }
+        };
+        xhr.send();
+    }
+    </script>
+    
 </html>
