Revert "19 implement search function for posts"

--- a/Home.html
+++ b/Home.html
@@ -19,10 +19,8 @@
         </nav>
         <div class="main-content">
             <header>
-                <form action="php/search.php" method="get">
-                    <input type="search" name="searchQuery" placeholder="Search...">
-                    <button type="submit">Search</button>
-                </form>                
+                <input type="search" placeholder="  Search">
+                <button href = ""> Search </button>
             </header>
             <main>
                 <div class="filter-dropdown">Sort by</div>
